Changelog
=========

Core, Rest, WebApi v0.2
=======================

Released on November 29, 2018.

- Fix: robust Uri handling.

Core, Rest, WebApi v0.1
=======================
 
Released on November 22, 2018.

- Initial release.